Issue #1 fix: added overflow auto to check status table

--- a/app/private/styles/reuseable/reUseable.less
+++ b/app/private/styles/reuseable/reUseable.less
@@ -298,5 +298,6 @@
 }
 
 .overflowContentHorizontal {
-    overflow-x: scroll !important;
+    overflow-x: auto;
+    max-width: 100%;
 }
